--- a/style/style.css
+++ b/style/style.css
@@ -1,44 +1,116 @@
-
-    
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-  body{
-    margin: 0%;
-  }
-    
-
-p{
-    color: rgb(83, 124, 39);
+body {
+  margin: 0%;
 }
 
-.box{
-    background: #1fe4b9;
+p {
+  color: rgb(12, 15, 9);
 }
-p{
-    font-size: 20px;
-    color: rgb(71, 43, 28);
-}
-form{
-    font-size: 20px;
-    color: black;
-}
-::placeholder{
-    color: rgb(94, 94, 99);
-}
-input{
-    border-color: rgb(8, 8, 216);
-}
- .form-holder{width: 500px;margin: 0 auto;padding:  30px;}
-    input {display: block; width: 98%;}
-    div p{
-        color: blue;
-    }
-    img{
-        max-width: 100%;
-        height: auto;
 
-    }
-    .register{
-        font-size: 30px;
-    }
+.box {
+  background: #1fe4b9;
+}
+p {
+  font-size: 20px;
+}
+.form {
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+}
+::placeholder {
+  color: rgb(94, 94, 99);
+}
+input {
+  border-color: rgb(8, 8, 216);
+}
+.form-holder {
+  width: 500px;
+  margin: 0 auto;
+  padding: 30px;
+}
+input {
+  display: block;
+  width: 98%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+.register {
+  font-size: 30px;
+  color: rgb(15, 14, 26);
+}
+.header_logo,
+.header_login,
+.header_menu {
+  display: inline-block;
+}
+.header {
+  font-size: 0;
+  border-bottom: 1px solid rgb(188, 197, 190);
+  padding: 20px 0;
+  margin-bottom: 20px;
+}
+.header_logo {
+  width: 150px;
+  vertical-align: middle;
+}
+.header_login {
+  width: 100px;
+  font-size: 16px;
+  vertical-align: middle;
+  background-color: #2b8a75;
+  text-align: center;
+  padding: 8px;
+  color: rgb(205, 220, 233);
+  text-decoration: none;
+  border-radius: 6px;
+  border: 2px solid green;
+}
+.header_login:hover {
+  color: #2b8a75;
+  background: #fff;
+}
+
+.header_menu {
+  width: calc(100% - 250px);
+  font-size: 16px;
+  text-align: center;
+  vertical-align: middle;
+}
+.header_menu li {
+  display: inline-block;
+  margin: 15px;
+}
+.header_menu li {
+  display: inline-block;
+}
+* {
+  box-sizing: border-box;
+}
+.visual {
+  font-size: 0;
+}
+.visual_text {
+  width: 50%;
+  display: inline-block;
+  font-size: 25px;
+  vertical-align: middle;
+  padding-right: 10%;
+  color: #141b1a;
+}
+.color_text {
+  color: #165a16;
+}
+.text_block {
+  color: #9d9e9e;
+}
+
+.visual_img {
+  width: 50%;
+  display: inline-block;
+  vertical-align: middle;
+}
