--- a/style/style.css
+++ b/style/style.css
@@ -419,3 +419,21 @@ input {
   font-weight: bold;
   color: #055241;
 }
+
+.plants {
+  background: #055241;
+  padding: 10px;
+  display: flex;
+
+
+
+}
+
+.plants-item {
+  border: 2px solid firebrick;
+  background: #1fe4b9;
+  padding: 10px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
