--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ time {
 
 h2 {
   margin-top: 0;
-  font-weight: 900;
+  font-weight: 700;
 
 
 }
@@ -62,14 +62,7 @@ h3 {
 p {
   margin-top: 0;
   font-weight: 400;
-
 }
-
-
-
-
-
-
 
 body {
   margin: 0;
@@ -77,15 +70,11 @@ body {
   font-size: 14px;
   line-height: 24px;
   color: #000000;
-
 }
-
-
 
 .box {
-  background: #1fe4b9;
+  background: #46a358;
 }
-
 
 .form {
   font-size: 20px;
@@ -110,8 +99,6 @@ input {
   display: block;
   width: 98%;
 }
-
-
 
 .register {
   font-size: 30px;
@@ -142,17 +129,17 @@ input {
   width: 100px;
   font-size: 16px;
   vertical-align: middle;
-  background-color: #2b8a75;
+  background-color: #46a358;
   text-align: center;
   padding: 8px;
   color: rgb(205, 220, 233);
   text-decoration: none;
   border-radius: 6px;
-  border: 2px solid green;
+  border: 2px solid #46a358;
 }
 
 .header_login:hover {
-  color: #2b8a75;
+  color: #46a358;
   background: #fff;
 }
 
@@ -161,14 +148,7 @@ input {
   font-size: 16px;
   text-align: center;
   vertical-align: middle;
-
-
-
 }
-
-
-
-
 
 .header_menu li {
 
@@ -176,9 +156,6 @@ input {
   margin: 15px;
 
 }
-
-
-
 
 .visual {
   font-size: 0;
@@ -194,12 +171,11 @@ input {
 }
 
 .color_text {
-  color: #055342bb;
+  color: #46a358;
   font-weight: 850;
   width: 16px;
 
 }
-
 
 .text_block {
   color: #9d9e9e;
@@ -215,23 +191,18 @@ input {
   min-width: 100px;
   font-size: 16px;
   vertical-align: middle;
-  background-color: #2b8a75;
+  background-color: #46a358;
   text-align: center;
   padding: 8px;
   color: rgb(225, 230, 235);
   text-decoration: none;
   border-radius: 6px;
   border: 2px solid green;
-
-
 }
 
 .button:hover {
-  color: #1e9178;
+  color: #46a358;
   background: #fff;
-
-
-
 }
 
 .my_list {
@@ -241,8 +212,6 @@ input {
 .header_menu a {
   color: #000000;
   text-decoration: none;
-
-
 }
 
 .header_menu a:hover {
@@ -266,7 +235,6 @@ input {
 
 } */
 
-
 .sidebare {
   float: left;
   width: 310px;
@@ -287,82 +255,57 @@ input {
 }
 
 .sidebare__menu .active_list a {
-  color: #055241;
+  color: #46a358;
   font-weight: bold;
 }
 
 .sidebare__menu a:hover {
-  color: #055241;
+  color: #46a358;
   font-weight: bold;
 
 }
 
-
-
-
-
 .content-holder {
   float: right;
   width: calc(100% - 310px);
-
-
-
-
-
-
-
 }
 
 .cards {
 
   display: block;
-
-
 }
 
 .img_cards {
   width: 33.33%;
-
 }
 
 .clearfix::after {
   content: "";
   display: block;
   clear: left;
-
-
-
 }
 
 .filter_menu .active_menu a {
-  color: #055241;
+  color: #46a358;
   font-weight: bold;
-
-
 }
 
 .filter menu .active_menu a:hover {
-  color: #055241;
+  color: #46a358;
   font-weight: bold;
-
-
 }
-
 
 .filter_menu {
   color: #000000;
   font-size: 16px;
   line-height: 25px;
   list-style: none;
-
-
 }
 
 .filter_menu a {
   color: inherit;
   text-decoration: none;
 }
-
 
 .filter_list {
   float: left;
@@ -376,7 +319,6 @@ input {
   float: right;
   width: auto;
 
-
 }
 
 .filter {
@@ -388,16 +330,6 @@ input {
   border: none;
 }
 
-
-
-
-
-
-
-
-
-
-
 .pagination {
   float: right;
 }
@@ -407,20 +339,18 @@ input {
   height: 35px;
   display: inline-block;
   border-radius: 4px;
-  background: #055241;
+  background: #46a358;
   border: 1px solid rgb(151, 150, 146);
-
-
 }
 
 .pagination a:hover {
-  background: #0e8543;
+  background: #46a358;
   color: #fff;
 
 }
 
 .pagination.active a {
-  background: #0e8543;
+  background: #46a358;
   color: #9d9e9e;
 
 }
@@ -430,14 +360,6 @@ input {
   display: inline-block;
 
 }
-
-
-
-
-
-
-
-
 
 .content-holder li {
   display: inline-block;
@@ -451,7 +373,7 @@ input {
 .content-holder li:hover {
   text-decoration: underline;
   font-weight: bold;
-  color: #055241;
+  color: #46a358;
 }
 
 .plants {
@@ -459,8 +381,12 @@ input {
   padding: 10px;
 
 
+}
 
-
+.plants-text {
+  margin-right: 0%;
+  text-align: right;
+  max-width: 200px;
 }
 
 .plants-item {
@@ -469,8 +395,7 @@ input {
   width: 50%;
   display: flex;
   align-items: center;
-
-
+  margin-top: -1%;
 
 }
 
@@ -479,48 +404,55 @@ input {
   padding: 10px;
   display: flex;
 
+}
 
-
-
-
-
-
-
-
-
+.text-r {
+  text-align: right;
+  color: #6d7272;
 }
 
 .flex-box {
   padding: 10px;
-  width: 100%;
-
-
-
-
-
+  width: 25%;
 }
 
 .text-block {
   text-align: center;
-
-
+  color: #6d7272;
 }
 
 time {
-  color: #376e40;
+  color: #46a358;
 }
 
 .linc-flex {
   text-decoration: none;
   color: #000000;
 
-
 }
 
 .linc-flex:hover {
-  color: #055241;
+  color: #46a358;
 }
 
 .color-box {
   color: #6d7272;
+  text-align: left;
+}
+
+.color-title {
+  color: #000000;
+}
+
+.btn-2 {
+  width: 100px;
+  font-size: 16px;
+  vertical-align: middle;
+  background-color: #46a358;
+  text-align: center;
+  padding: 8px;
+  color: rgb(205, 220, 233);
+  text-decoration: none;
+  border-radius: 6px;
+  border: 2px solid #46a358;
 }
