--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@
 
 @font-face {
   font-family: 'Cera Pro';
-  src: url(/fonts/CeraPro-Medium.woff2);
+  src: url("/fonts/CeraPro-Medium.woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -46,16 +46,24 @@ time {
 
 }
 
+h1 {
+  font-weight: 900;
+  font-size: 70px;
+  line-height: 70px;
+  color: #3d3d3d;
+  margin-top: 0;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+
+}
+
 h2 {
   margin-top: 0;
-  font-weight: 700;
-
 
 }
 
 h3 {
   margin-top: 0;
-  font-weight: 700;
 
 }
 
@@ -166,19 +174,19 @@ input {
   display: inline-block;
   font-size: 20px;
   vertical-align: middle;
-  padding-right: 10%;
+  padding-right: 30px;
   color: #141b1a;
 }
 
 .color_text {
   color: #46a358;
-  font-weight: 850;
-  width: 16px;
 
 }
 
 .text_block {
   color: #9d9e9e;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 .visual_img {
@@ -197,7 +205,7 @@ input {
   color: rgb(225, 230, 235);
   text-decoration: none;
   border-radius: 6px;
-  border: 2px solid green;
+  border: 2px solid #46a358;
 }
 
 .button:hover {
@@ -268,21 +276,25 @@ input {
 .content-holder {
   float: right;
   width: calc(100% - 310px);
+
 }
 
 .cards {
+  display: flex;
+  flex-wrap: wrap;
 
-  display: block;
+
 }
 
 .img_cards {
-  width: 33.33%;
+  color: #6f7272;
+
 }
 
 .clearfix::after {
   content: "";
   display: block;
-  clear: left;
+  clear: both;
 }
 
 .filter_menu .active_menu a {
@@ -300,6 +312,10 @@ input {
   font-size: 16px;
   line-height: 25px;
   list-style: none;
+  float: left;
+  margin: 0;
+  padding: 0;
+
 }
 
 .filter_menu a {
@@ -309,6 +325,7 @@ input {
 
 .filter_list {
   float: left;
+
 }
 
 .filter_sorting {
@@ -319,15 +336,18 @@ input {
   float: right;
   width: auto;
 
+
 }
 
 .filter {
-  float: left;
-  width: 310px;
+  margin-bottom: 30px;
 }
+
+
 
 .filter_select {
   border: none;
+
 }
 
 .pagination {
@@ -363,9 +383,9 @@ input {
 
 .content-holder li {
   display: inline-block;
-  margin: 10px;
   color: #000000;
   text-decoration: none;
+  margin: 0 10px;
 
 
 }
@@ -389,6 +409,10 @@ input {
   max-width: 200px;
 }
 
+.plants-text h2 {
+  text-transform: uppercase;
+}
+
 .plants-item {
 
   padding: 10px;
@@ -396,6 +420,12 @@ input {
   display: flex;
   align-items: center;
   margin-top: -1%;
+  background: #ffffff;
+
+}
+
+.plants-item img {
+  margin-top: -70px;
 
 }
 
@@ -407,7 +437,7 @@ input {
 }
 
 .text-r {
-  text-align: right;
+
   color: #6d7272;
 }
 
