--- a/style/reset.css
+++ b/style/reset.css
@@ -379,3 +379,11 @@ template {
 [hidden] {
   display: none;
 }
+
+::after {
+  box-sizing: border-box;
+}
+
+::before {
+  box-sizing: border-box;
+}
