--- a/style/style.css
+++ b/style/style.css
@@ -117,14 +117,14 @@ input {
 .header_login,
 .header_menu {
   display: inline-block;
-
 }
 
 .header {
   font-size: 0;
   border-bottom: 1px solid rgb(188, 197, 190);
-  padding: 20px 0;
+  padding: 0;
   margin-bottom: 20px;
+
 
 }
 
@@ -330,13 +330,17 @@ input {
   display: none;
   padding: 0;
   justify-content: center;
+  margin-left: -15px;
+
+
+
 
 
 }
 
 
 .card-link li {
-  border-radius: 4px;
+  /* border-radius: 4px;*/
   /* padding: 0 10px;*/
 }
 
@@ -344,7 +348,13 @@ input {
   background: #ffffff;
   display: flex;
   width: 20px;
-  height: 17px;
+  height: 20px;
+  border-radius: 4px;
+
+
+
+
+
 }
 
 
